# worm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  a.out  build.rs  config.nims  hw  hw.rs  index.html  log.txt  menu.sh  sublime_text  test.c  worm.nimble
.github/workflows/: build.yml  rust.yml
assets/: worm.desktop
docs/: wormc.md
examples/: autostart  config  jgmenu_run  rc  sxhkdrc
src/: args.rs  atoms.nim  events.nim  ewmh.rs  icccm.rs  ipc.rs  log.nim  main.rs  oldwm.rs  types.nim  wm.nim  wm.rs  worm.nim  wormc.nim  wormc.rs  xcb-main.rs  xlib-main.rs
src/events/: buttonpress.nim  buttonrelease.nim  clientmessage.nim  configurenotify.nim  configurerequest.nim  destroynotify.nim  enternotify.nim  expose.nim  leavenotify.nim  maprequest.nim  motionnotify.nim  propertynotify.nim  unmapnotify.nim
