[package]
name = "worm"
version = "0.1.0"
edition = "2018"
default-run = "worm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "*", features = ["xinerama"] }
dirs = "*"

[profile.release]
lto = true
opt-level = 'z'

[[bin]]
name = "wormc"
path = "src/wormc.rs"

